...
"tPs-K2-ZPz.title" = "Save";
"w2g-wR-hPu.title" = "Add";
"2Ld-md-U2v.headerCell.title" = "Family";
"DwS-ve-MLJ.placeholderString" = "Type to filter…";
"F0z-JX-Cv5.title" = "Choose a Font";
"Ihd-HK-wsv.title" = "Cancel";
"S5m-SJ-Ggp.title" = "OK";
"TSI-Wt-Edx.title" = "Choose a font:";
"XsF-e7-fXF.title" = "Preview";
"fez-Z3-dnL.headerCell.title" = "Typeface";
"qwM-r2-9ki.title" = "Test";
"waR-LB-484.title" = "Or enter the font name:";
"I8a-rb-zex.title" = "Cancel";
...
"zhe-yr-CTO.title" = "Recent Searches";
"3aN-Hg-GkT.title" = "Uncheck \"receive beta updates\" from Settings > General, and install a stable release from our <a href=\"https://iina.io\">official website</a>.";
"BIz-NQ-0qD.title" = "Report to us via <a href=\"mailto:developers@iina.io\">email</a> or <a href=\"https://github.com/iina/iina/issues\">GitHub issue</a>.";
"FKG-Tz-TCV.title" = "Open URL…";
"H7D-2H-wQn.title" = "You are using a beta version of IINA";
"I6R-Jl-2Jk.title" = "Found a bug?";
"KWZ-BM-GBN.title" = "Resume";
"g2g-dy-qBH.title" = "BETA";
"qsU-lZ-WQq.title" = "Open…";
"s3U-4u-gYp.title" = "Want to rollback?";
"0vG-Pg-DIl.title" = "Forced";
"1dz-Vt-0MO.title" = "FPS:";
"4jf-w4-kkv.title" = "File path:";
...
"osd.cannot_login" = "Cannot login";
"osd.canceled" = "Cancelled";
"osd.filter_added" = "Added Filter: %@";
"osd.filter_removed" = "Removed Filter";
"osd.file_loop" = "File Loop: %@";
"osd.playlist_loop" = "Playlist Loop: %@";
"preference.title" = "Preferences";
"preference.general" = "General";
"preference.ui" = "UI";
"preference.video_audio" = "Video/Audio";
"preference.subtitle" = "Subtitle";
"preference.network" = "Network";
"preference.control" = "Control";
"preference.keybindings" = "Key Bindings";
"preference.advanced" = "Advanced";
"preference.plugins" = "Plugins";
"preference.utilities" = "Utilities";
"preference.scripts" = "Scripts";
"preference.not_logged_in" = "Not logged in";
"preference.logged_in_as" = "Logged in as %@";
"preference.system_media_control" = "Use system media control";
"preference.key_binding_hint_1" = "To edit key bindings in current configuration file, click \"Duplicate…\" button first to create a copy.";
"preference.key_binding_hint_2" = "Double click a row at the right side to edit the corresponding key binding.";
...
"mGw-jm-5x2.title" = "Second Subtitle";
"mND-N8-z6o.title" = "Enter Picture in Picture";
"mT1-1m-HwN.title" = "Flip";
"n8f-ub-Udb.title" = "Cycle Audio Tracks";
"n90-to-nRT.title" = "Flip";
"npH-8B-XA4.title" = "Delete Current File";
"oas-Oc-fiZ.title" = "Open Recent";
"oqG-7L-NLD.title" = "Previous Media";
"oxF-BB-lBy.title" = "Previous Frame";
"pAo-L5-qTO.title" = "Subtitle Delay + 0.5s";
"pWh-nh-0pN.title" = "Edit";
"pdj-9C-Fn1.title" = "Volume - 5%";
"pqF-SZ-Ifz.title" = "Previous Chapter";
...
