...
@MainActor
enum Dialogs {
  static func alert(_ key: String,
                    comment: String? = nil,
                    arguments: [CVarArg]? = nil,
                    style: NSAlert.Style = .critical) -> DialogAlert {
    let alert = NSAlert()

    switch style {
    case .critical:
      alert.messageText = NSLocalizedString("alert.title_error", comment: "Error")
    case .informational:
      alert.messageText = NSLocalizedString("alert.title_info", comment: "Information")
...
